clusters/homelab/infrastructure/pi-hole/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware
  namespace: pihole
spec:
  redirectRegex:
    regex: ^/$
    replacement: /admin
    permanent: true
