clusters/homelab/infrastructure/pi-hole/ingressroute-dns-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pihole-dns-tcp
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns-tcp
          port: 53
